Added cookie parser and helmet.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/express-handlebars": "^5.3.0",
+    "cookie-parser": "^1.4.6",
     "express-handlebars": "^5.3.0",
+    "helmet": "^7.0.0",
     "mysql2": "^3.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
