--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cookie-parser": "^1.4.6",
     "express-handlebars": "^5.3.0",
     "helmet": "^7.0.0",
+    "method-override": "^3.0.0",
     "mysql2": "^3.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
