--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/express-handlebars": "^5.3.0",
     "cookie-parser": "^1.4.6",
+    "daisyui": "^2.52.0",
     "express-handlebars": "^5.3.0",
     "helmet": "^7.0.0",
     "method-override": "^3.0.0",
@@ -52,6 +53,7 @@
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
+    "tailwindcss": "^3.3.2",
     "ts-jest": "29.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
