Added proper styling to the main layout.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ lerna-debug.log*
 /public/img/f_logo_RGB-Blue_58.png
 /public/img/logo-prototyp.jpg
 /public/img/tlo1.jpg
+/public/img/zdjęcie1.jpg
