Added news route with pagination.

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,8 @@ lerna-debug.log*
 !.vscode/extensions.json
 /.env
 /public/img/upload/
-/public/img/300571133_490695053062752_1647734458814074167_n.jpg
 /public/img/f_logo_RGB-Blue_58.png
 /public/img/logo-prototyp.jpg
-/public/img/tlo1.jpg
-/public/img/zdjęcie1.jpg
+
+/public/img/hero.jpg
+/public/img/home.jpg
