--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/throttler": "^4.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/express-handlebars": "^5.3.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "daisyui": "^2.52.0",
     "date-fns": "^2.30.0",
