--- a/package.json
+++ b/package.json
@@ -35,10 +35,14 @@
     "express-handlebars": "^5.3.0",
     "helmet": "^7.0.0",
     "method-override": "^3.0.0",
+    "mime": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.16"
+    "sharp": "^0.32.1",
+    "typeorm": "^0.3.16",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -46,6 +50,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.15.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
