Updated app version: 0.3.0

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pp23",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "",
-  "author": "",
+  "author": "Nieopodal",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
