--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "daisyui": "^2.52.0",
     "date-fns": "^2.30.0",
     "express-handlebars": "^5.3.0",
+    "flowbite": "^1.6.6",
     "helmet": "^7.0.0",
     "method-override": "^3.0.0",
     "mime": "^3.0.0",
