Added one source of static pages data: pages.data.json.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ lerna-debug.log*
 
 /public/img/hero.jpg
 /public/img/home.jpg
+/public/docs/Statut Publicznego Przedszkola nr 23.pdf
+/data/pages.data.json
